# rag-engine

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  Procfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 3e4f672f43e5_phase_5_realtime_and_workers.py  4612949e1adb_initial_tables.py  7e4af545d2c1_phase_9_1_rag_chunks_mapping.py  90a38b349922_initial_tables.py
client/: .gitignore  package-lock.json  package.json  tailwind.config.ts  verify_login_fix.py
client/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/lib/: api-client.ts  api-endpoints.ts  config.ts  constants.ts  query-client.tsx  query-keys.ts  routes.ts  supabase-client.ts
client/styles/: tokens.css
docs/design/: TEMPLATE.md  architecture-overview.md  client-design-phase-5.md  client-design-phase-7.md  client-design.md  phase-1-client-design.md  phase-1-design.md  phase-10-design.md  phase-2-design.md  phase-3-design.md  phase-4-design.md  phase-5-design.md  phase-5.1-design.md  phase-6-design.md  phase-7-design.md  phase-7.1-design.md  phase-7.2-design.md  phase-8-design.md  phase-9-design.md  phase-9.1-design.md
docs/implement/: README.md  implement-2025-11-30-phase-1-api-db.md  implement-2025-12-01-init-architecture-phase-2-3-and-constants.md  implement-2025-12-01-phase-2-parser-pipeline.md  implement-2025-12-01-test-supabase-login-flow.md  implement-2025-12-02-phase-3-rag-engine.md  implement-2025-12-02-phase-4-delete-and-cleanup.md  implement-2025-12-03-phase-3-pgvector-supabase.md  (+12 more)
scripts/: debug_failed_job.py  e2e_phase1.py  init_db.py  seed_users.py
(+91 files in other folders)
